<resources>
    <string name="app_name">Attend - College attendance Tracker</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="home">home</string>
    <string name="attendance">attendance</string>
    <string name="tasks">tasks</string>
    <string name="marks">marks</string>


    <string name="open_drawer">open drawer</string>
    <string name="close_drawer">close drawer</string>
    <string name="c">C</string>
    <string name="a">A</string>
    <string name="p">P</string>
    <string name="see_all">See all</string>
    <string name="upcoming_assignment">Upcoming Assignment</string>
    <string name="next_holiday">Next holiday</string>
    <string name="bunked_this_week">Bunked this week</string>
    <string name="view_amp_edit_profile"><![CDATA[view & edit profile]]></string>
    <string name="holidays">Holidays</string>
    <string name="time_table">Time table</string>
    <string name="setting">Setting</string>
    <string name="auto_excluded_from_attendance">Auto-excluded from attendance %</string>
    <string name="notify_before_holiday">Notify before holiday</string>
    <string name="get_a_reminder_1_day_prior">Get a reminder 1 day prior</string>
    <string name="theme_amp_preferences"><![CDATA[Theme & preferences]]></string>
    <string name="accent_color">Accent color</string>
    <string name="tap_any_cell_to_assign_or_change_a_subject">Tap any cell to assign or change a subject</string>
    <string name="_50_minsample">50 min</string>
    <string name="profile">Profile</string>
    <string name="avatar_color">Avatar color</string>
    <string name="used_across_the_app_for_greetings_and_tracking">Used across the app for greetings and tracking</string>
    <string name="personal_info">Personal Info</string>
    <string name="name">Full Name</string>
    <string name="dd_mm_yyyy">DD/MM/YYYY</string>
</resources>