<LinearLayout android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_marginBottom="@dimen/dp_15"
    android:background="@drawable/bottom_border"
    android:orientation="horizontal"
    android:paddingBottom="@dimen/dp_15"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <LinearLayout
        android:layout_width="@dimen/dp_170"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <com.google.android.material.card.MaterialCardView
            android:layout_width="@dimen/dp_10"
            android:layout_height="@dimen/dp_10"
            android:layout_marginStart="@dimen/dp_5"
            android:layout_marginEnd="@dimen/dp_10"
            app:cardBackgroundColor="@color/accent"
            app:cardCornerRadius="@dimen/dp_10" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/subjectName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Data structure"
                android:textColor="@color/text"
                android:textSize="@dimen/sp_18" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/subject_time"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="9:00 - 10:00 AM"
                android:textColor="@color/text_dim"
                android:textSize="@dimen/sp_14" />
        </LinearLayout>


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="end"
        android:orientation="horizontal"
        android:weightSum="3">
        <com.google.android.material.card.MaterialCardView
            android:id="@+id/presentBtn"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            app:cardBackgroundColor="@android:color/transparent"
            app:strokeWidth="1dp"
            app:strokeColor="@color/border"
            android:layout_weight="1"
            android:layout_marginEnd="@dimen/dp_10"
            >
            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/p"
                android:textColor="@color/text"
                android:layout_gravity="center"
                android:textSize="@dimen/sp_16"
                />
        </com.google.android.material.card.MaterialCardView>


        <com.google.android.material.card.MaterialCardView
            android:id="@+id/absentBtn"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            app:cardBackgroundColor="@android:color/transparent"
            app:strokeWidth="1dp"
            app:strokeColor="@color/border"
            android:layout_weight="1"
            android:layout_marginEnd="@dimen/dp_10"
            >
            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/a"
                android:textColor="@color/text"
                android:layout_gravity="center"
                android:textSize="@dimen/sp_16"
                />
        </com.google.android.material.card.MaterialCardView>
        <com.google.android.material.card.MaterialCardView
            android:id="@+id/canceledBnt"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            app:cardBackgroundColor="@android:color/transparent"
            app:strokeWidth="1dp"
            app:strokeColor="@color/border"
            android:layout_weight="1"

            >
            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/c"
                android:textColor="@color/text"
                android:layout_gravity="center"
                android:textSize="@dimen/sp_16"
                />
        </com.google.android.material.card.MaterialCardView>






    </LinearLayout>


</LinearLayout>