<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg"
    android:fitsSystemWindows="false"
    android:orientation="vertical"
    android:paddingHorizontal="@dimen/dp_15"
    android:paddingBottom="@dimen/dp_15"
    tools:context=".screens.holiday.HolidayActivity">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_42"
        android:orientation="horizontal">
        <com.google.android.material.card.MaterialCardView
            android:id="@+id/backBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:cardBackgroundColor="@color/surface"
            android:layout_alignParentStart="true"
            app:strokeColor="@color/border"
            >
            <androidx.appcompat.widget.AppCompatImageView
                android:layout_width="@dimen/dp_40"
                android:layout_height="@dimen/dp_40"
                android:padding="@dimen/dp_4"
                android:src="@drawable/arrow_left"/>
        </com.google.android.material.card.MaterialCardView>
        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/holidays"
            android:textColor="@color/text"
            android:textSize="@dimen/sp_26"
            android:textAlignment="center"
            android:layout_centerInParent="true"
            />
        <com.google.android.material.card.MaterialCardView
            android:id="@+id/add_holiday_btn"
            android:layout_width="@dimen/dp_40"
            android:layout_height="@dimen/dp_40"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            app:cardBackgroundColor="@color/surface"
            app:strokeColor="@color/border"
            >
            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:src="@drawable/plus"
                android:padding="5dp"/>

        </com.google.android.material.card.MaterialCardView>

    </RelativeLayout>
    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_10"
        android:text="@string/auto_excluded_from_attendance"
        android:textColor="@color/text_dim"
        android:textSize="@dimen/sp_13" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/surface_card_bg"
        android:orientation="vertical"
        android:paddingHorizontal="@dimen/dp_12"
        android:paddingTop="@dimen/dp_15"
        android:layout_marginTop="@dimen/dp_10">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/dp_15"
            android:background="@drawable/bottom_border"
            android:orientation="horizontal"
            android:paddingBottom="@dimen/dp_15"
            android:weightSum="4">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:layout_weight="3">


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/holiday_name"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="Independence Day"
                        android:textColor="@color/text"
                        android:textSize="@dimen/sp_18" />

                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/holiday_date"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="Aug 15 college closed"
                        android:textColor="@color/text_dim"
                        android:textSize="@dimen/sp_14" />
                </LinearLayout>





            </LinearLayout>
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="end"
                >
                <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/options_btn"
                    android:layout_width="@dimen/dp_25"
                    android:layout_height="@dimen/dp_25"
                    android:padding="@dimen/dp_5"
                    android:rotation="270"
                    android:src="@drawable/options_dot"
                    android:layout_gravity="center_vertical"
                    />
            </LinearLayout>




        </LinearLayout>




    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/surface_card_bg"
        android:orientation="horizontal"
        android:paddingHorizontal="@dimen/dp_12"
        android:paddingVertical="@dimen/dp_15"
        android:layout_marginTop="@dimen/dp_15"
        android:weightSum="4">
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="3"
            android:orientation="vertical">
            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/notify_before_holiday"
                android:textSize="@dimen/sp_16"
                android:textStyle="bold"
                android:textColor="@color/text"
                />
            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/get_a_reminder_1_day_prior"
                android:textColor="@color/text_dim"

                />


        </LinearLayout>
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_weight="1"
            android:gravity="end">
            <androidx.appcompat.widget.SwitchCompat
                android:id="@+id/enable_holiday_notification"
                android:layout_width="@dimen/dp_40"
                android:layout_height="@dimen/dp_40"
                app:thumbTint="@color/all_white"
                app:trackTint="@color/accent"
                android:checked="true"

                />

        </LinearLayout>


    </LinearLayout>
</LinearLayout>