<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/bg"
    tools:context=".screens.home.pages.sidebar.SideBarFragment"
    android:paddingHorizontal="@dimen/dp_20"
    android:clickable="false"
    android:orientation="vertical">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">
        <LinearLayout
            android:id="@+id/profile_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="65dp"

            android:paddingBottom="@dimen/dp_20">

            <com.google.android.material.card.MaterialCardView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:cardCornerRadius="@dimen/dp_50"
                app:strokeWidth="0dp"
                app:cardBackgroundColor="@color/accent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"

                >

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/username_initials"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/dp_15"
                    android:text="RE"
                    android:textColor="@color/all_white"
                    android:textSize="@dimen/sp_14" />

            </com.google.android.material.card.MaterialCardView>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginStart="@dimen/dp_15">
                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/userName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/text"
                    android:textSize="@dimen/sp_20"
                    android:text="Rashid ekbal"/>
                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/viewProfile"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/accent"
                    android:textSize="@dimen/sp_14"
                    android:text="@string/view_amp_edit_profile"
                    />


            </LinearLayout>

        </LinearLayout>
        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="More"
            android:textColor="@color/text"
            android:textSize="@dimen/sp_16"
            android:layout_marginVertical="@dimen/dp_10"/>
        <LinearLayout
            android:id="@+id/time_table_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_vertical"
            android:background="@drawable/bottom_border"
            android:paddingVertical="@dimen/dp_15"
            android:layout_marginBottom="@dimen/dp_10">
            <com.google.android.material.card.MaterialCardView
                android:layout_width="@dimen/dp_40"
                android:layout_height="@dimen/dp_40"
                app:cardBackgroundColor="@color/surface"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent">

                <androidx.appcompat.widget.AppCompatImageView
                    android:layout_width="@dimen/dp_35"
                    android:layout_height="@dimen/dp_35"
                    android:layout_gravity="center"
                    android:padding="@dimen/dp_8"
                    android:src="@drawable/time_table" />
            </com.google.android.material.card.MaterialCardView>
            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/sp_14"
                android:text="@string/time_table"
                android:textColor="@color/text"
                android:layout_marginStart="@dimen/dp_15"/>

        </LinearLayout>
        <LinearLayout
            android:id="@+id/holiday_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_vertical"
            android:background="@drawable/bottom_border"
            android:paddingVertical="@dimen/dp_15"
            android:layout_marginBottom="@dimen/dp_10">
            <com.google.android.material.card.MaterialCardView
                android:layout_width="@dimen/dp_40"
                android:layout_height="@dimen/dp_40"
                app:cardBackgroundColor="@color/surface"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent">

                <androidx.appcompat.widget.AppCompatImageView
                    android:layout_width="@dimen/dp_35"
                    android:layout_height="@dimen/dp_35"
                    android:layout_gravity="center"
                    android:padding="@dimen/dp_8"
                    android:src="@drawable/holiday" />
            </com.google.android.material.card.MaterialCardView>
            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/sp_14"
                android:text="@string/holidays"
                android:textColor="@color/text"
                android:layout_marginStart="@dimen/dp_15"/>

        </LinearLayout>
        <LinearLayout
            android:id="@+id/setting_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_vertical"
            android:background="@drawable/bottom_border"
            android:paddingVertical="@dimen/dp_15"
            android:clickable="true"
            android:layout_marginBottom="@dimen/dp_10">
            <com.google.android.material.card.MaterialCardView
                android:id="@+id/sideBar_btn"
                android:layout_width="@dimen/dp_40"
                android:layout_height="@dimen/dp_40"
                app:cardBackgroundColor="@color/surface"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent">

                <androidx.appcompat.widget.AppCompatImageView
                    android:layout_width="@dimen/dp_35"
                    android:layout_height="@dimen/dp_35"
                    android:layout_gravity="center"
                    android:padding="@dimen/dp_8"
                    android:src="@drawable/setting" />
            </com.google.android.material.card.MaterialCardView>
            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/sp_14"
                android:text="@string/setting"
                android:textColor="@color/text"
                android:layout_marginStart="@dimen/dp_15"/>

        </LinearLayout>
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginBottom="@dimen/dp_25"
        android:gravity="center_horizontal">
        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Attendance Tracker · v1.0.0"
            android:textColor="@color/text_dim"
            />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>